# mapeamento_litologico_preditivo

./: .gitignore  .python-version  .untitled.ows.swp.p  1 - Geopandas: Creating DataBase as geopackage.ipynb  1-GeoPandas-Read_shp_Write_gpkg.ipynb  1-Geopandas:_Geopackage_as_Database.ipynb  1.1 - Geapandas: Analysing Spatial Data.ipynb  1.1 - Geapandas: Analysing and Ploting Spatial Data.ipynb  1.1 - Geapandas: Manipulating GeoDataFrames.ipynb  1.1-Geapandas:Spatial_Data._Analysis.ipynb  1.1-Geapandas:Spatial_Data_Analysis.ipynb  1.1-Geapandas_Spatial_Data._Analysis.ipynb  1.2-Geapandas:Spatial_Data_Visualization.ipynb  1.2-Geapandas_Spatial_Data_Visualization.ipynb  1.ows  2 - Automacao Malha de Folhas Cartograficas.ipynb  2 - Pandas: Reading XYZ files from CPRM DataBase.ipynb  2-Pandas:Reading_XYZ_files_from_CPRM_DataBase.ipynb  2.1 - Pandas & Numpy: Descrevendo os dados brutos.ipynb  2.1-Pandas&Numpy:Descrevendo_os_dados_brutos.ipynb  3 - Automacao Malha de Folhas Cartograficas.ipynb  3 - Pandas: Reading XYZ files from CPRM DataBase.ipynb  3-Automacao_Malha_de_Folhas_Cartograficas.ipynb  4 - Verde: Getting Region.ipynb  4-Verde:_Getting_Region.ipynb  4.1 - Verde: Interpolating with Splines.ipynb  4.1-Verde:Interpolating_with_Splines.ipynb  4.2 - Traditional Interpolation.ipynb  4.3-Harmonica:Magnectic&Gravimetric_Inversions.ipynb  5 - Creating csv input to predictive model.ipynb  5-Creating_csv_ input_to_predictive_model.ipynb  5-Google_Earth_Eninge_API.ipynb  6 - Plotting Output RF.ipynb  Geoanalytics-Impact crater.ipynb  Interface_preditor.ipynb  README.md  Test_.ipynb  (+31 more)
(+489 files in other folders)
